// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> check how renders should render everything correctly for currentStep 1 and stepsNumber 3 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 2.4rem;
  max-width: 100%;
  width: 45rem;
}

.c0 .step-box {
  background-color: #FAFAFA;
  border: 3px solid #DADFE1;
  border-radius: 50%;
  color: #BFBFBF;
  height: 3.2rem;
  position: relative;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 3.2rem;
}

.c0 .step-box.active {
  background-color: #FAFAFA;
  border: 3px solid #1E8BC3;
  color: #000;
}

.c0 .step-line {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #DADFE1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  position: relative;
}

.c0 .step-line-fill {
  background-color: #1E8BC3;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: width 0.3s;
  transition: width 0.3s;
  width: 0;
}

.c0 .step-line-fill.active {
  width: 100%;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  height: 100%;
  width: 100%;
  opacity: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  height: 100%;
  width: 100%;
  opacity: 1;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #000;
  width: 1.7rem;
  height: 1.7rem;
}

.c1 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: 1;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

<div
    class="c0"
  >
    <div
      class="step-box active"
    >
      <span
        class="c1"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="c2"
          data-testid="ProgressBar-step-box-checkmark-hidden"
        >
          <div
            class="c3"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="c4"
          data-testid="ProgressBar-step-box-number-visible"
        >
          1
        </div>
      </span>
    </div>
    <div
      class="step-line"
    >
      <div
        class="step-line-fill"
      />
    </div>
    <div
      class="step-box"
    >
      <span
        class="c1"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="c2"
          data-testid="ProgressBar-step-box-checkmark-hidden"
        >
          <div
            class="c3"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="c4"
          data-testid="ProgressBar-step-box-number-visible"
        >
          2
        </div>
      </span>
    </div>
    <div
      class="step-line"
    >
      <div
        class="step-line-fill"
      />
    </div>
    <div
      class="step-box"
    >
      <span
        class="c1"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="c2"
          data-testid="ProgressBar-step-box-checkmark-hidden"
        >
          <div
            class="c3"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="c4"
          data-testid="ProgressBar-step-box-number-visible"
        >
          3
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ProgressBar /> check how renders should render everything correctly for currentStep 2 and stepsNumber 3 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 2.4rem;
  max-width: 100%;
  width: 45rem;
}

.c0 .step-box {
  background-color: #FAFAFA;
  border: 3px solid #DADFE1;
  border-radius: 50%;
  color: #BFBFBF;
  height: 3.2rem;
  position: relative;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 3.2rem;
}

.c0 .step-box.active {
  background-color: #FAFAFA;
  border: 3px solid #1E8BC3;
  color: #000;
}

.c0 .step-line {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #DADFE1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  position: relative;
}

.c0 .step-line-fill {
  background-color: #1E8BC3;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: width 0.3s;
  transition: width 0.3s;
  width: 0;
}

.c0 .step-line-fill.active {
  width: 100%;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  height: 100%;
  width: 100%;
  opacity: 1;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  height: 100%;
  width: 100%;
  opacity: 0;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #000;
  width: 1.7rem;
  height: 1.7rem;
}

.c1 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: 1;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

<div
    class="c0"
  >
    <div
      class="step-box active"
    >
      <span
        class="c1"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="c2"
          data-testid="ProgressBar-step-box-checkmark-visible"
        >
          <div
            class="c3"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="c4"
          data-testid="ProgressBar-step-box-number-hidden"
        >
          1
        </div>
      </span>
    </div>
    <div
      class="step-line"
    >
      <div
        class="step-line-fill active"
      />
    </div>
    <div
      class="step-box active"
    >
      <span
        class="c1"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="c4"
          data-testid="ProgressBar-step-box-checkmark-hidden"
        >
          <div
            class="c3"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="c2"
          data-testid="ProgressBar-step-box-number-visible"
        >
          2
        </div>
      </span>
    </div>
    <div
      class="step-line"
    >
      <div
        class="step-line-fill"
      />
    </div>
    <div
      class="step-box"
    >
      <span
        class="c1"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="c4"
          data-testid="ProgressBar-step-box-checkmark-hidden"
        >
          <div
            class="c3"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="c2"
          data-testid="ProgressBar-step-box-number-visible"
        >
          3
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ProgressBar /> check how renders should render everything correctly for currentStep 3 and stepsNumber 3 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 2.4rem;
  max-width: 100%;
  width: 45rem;
}

.c0 .step-box {
  background-color: #FAFAFA;
  border: 3px solid #DADFE1;
  border-radius: 50%;
  color: #BFBFBF;
  height: 3.2rem;
  position: relative;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 3.2rem;
}

.c0 .step-box.active {
  background-color: #FAFAFA;
  border: 3px solid #1E8BC3;
  color: #000;
}

.c0 .step-line {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #DADFE1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  position: relative;
}

.c0 .step-line-fill {
  background-color: #1E8BC3;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: width 0.3s;
  transition: width 0.3s;
  width: 0;
}

.c0 .step-line-fill.active {
  width: 100%;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  height: 100%;
  width: 100%;
  opacity: 1;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  height: 100%;
  width: 100%;
  opacity: 0;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #000;
  width: 1.7rem;
  height: 1.7rem;
}

.c1 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: 1;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

<div
    class="c0"
  >
    <div
      class="step-box active"
    >
      <span
        class="c1"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="c2"
          data-testid="ProgressBar-step-box-checkmark-visible"
        >
          <div
            class="c3"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="c4"
          data-testid="ProgressBar-step-box-number-hidden"
        >
          1
        </div>
      </span>
    </div>
    <div
      class="step-line"
    >
      <div
        class="step-line-fill active"
      />
    </div>
    <div
      class="step-box active"
    >
      <span
        class="c1"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="c2"
          data-testid="ProgressBar-step-box-checkmark-visible"
        >
          <div
            class="c3"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="c4"
          data-testid="ProgressBar-step-box-number-hidden"
        >
          2
        </div>
      </span>
    </div>
    <div
      class="step-line"
    >
      <div
        class="step-line-fill active"
      />
    </div>
    <div
      class="step-box active"
    >
      <span
        class="c1"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="c4"
          data-testid="ProgressBar-step-box-checkmark-hidden"
        >
          <div
            class="c3"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="c2"
          data-testid="ProgressBar-step-box-number-visible"
        >
          3
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
